--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
+<!DOCTYPE html>
 <html>
 
 	<head>
-		<title>Q Hompage</title>
+		<title>Self-introduction</title>
 	</head>
 	
-	<body>
+	<body bgcolor="grey">
+	
 		<h1> Hello! </h1>
+		
+		<a href=lesson01.html>Lesson 1</a>
+		
 	</body>
 	
 </html>
